--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "lucide-react": "^0.244.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
